Prevent "jumping" when selecting tab

--- a/static/css/apps.css
+++ b/static/css/apps.css
@@ -13,6 +13,7 @@
 }
 .tabs .tab {
     display: inline;
+    position: relative;
 }
 .tab label, .tab a {
     position: relative;
@@ -29,9 +30,7 @@
     border-bottom: 1px solid #eee;
 }
 .tab [type=radio] {
-    position: fixed;
-    bottom: 100%;
-    left: 0;
+    position: absolute;
     opacity: 0;
 }
 .tabs .tab-panel {
